Bug 372591 - Doesn't work with dark theme
Summary: Doesn't work with dark theme
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: Frameworks
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-17 13:56 UTC by beojan
Modified: 2016-11-20 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description beojan 2016-11-17 13:56:33 UTC
In the spreadsheet, the text color is hard-coded to black, making it illegible with a dark theme. Likewise, the background for the textbox where a function is entered (for inclusion in a plot) is hard-coded to white.

The underlying cause is that whenever a background color is hard-coded for some component, the foreground color should also be hard-coded and vice versa.
Comment 1 Alexander Semke 2016-11-20 10:13:00 UTC
Git commit 795f066872b96fc5eac816725550c4161b1d56dc by Alexander Semke.
Committed on 20/11/2016 at 10:09.
Pushed by asemke into branch 'master'.

Don't change the foreground color in SpreadsheetModel and the background color in ExpressionTextEdit.
MatrixModel still needs to be fixed in order to get it better looking with dark themes.
FIXED-IN: 2.4

M  +16   -13   src/backend/spreadsheet/SpreadsheetModel.cpp
M  +1    -1    src/commonfrontend/spreadsheet/SpreadsheetView.cpp
M  +2    -2    src/kdefrontend/widgets/ExpressionTextEdit.cpp

http://commits.kde.org/labplot/795f066872b96fc5eac816725550c4161b1d56dc