Don't change the foreground color in SpreadsheetModel and the background color in ExpressionTextEdit. MatrixModel still needs to be fixed in order to get it better looking with dark themes.

BUG: 372591
FIXED-IN: 2.4